# zeetee

./: .env.example  LICENSE  README.md  cleanup.sh  pyproject.toml  run.sh  run_experiment.slurm  run_experiment_N10.slurm  run_experiment_N100.slurm  run_experiment_N1000.slurm  run_experiment_N200.slurm  run_experiment_N300.slurm  run_experiment_N400.slurm  run_experiment_N500.slurm  run_experiment_N600.slurm  run_experiment_N700.slurm  run_experiment_N800.slurm  run_experiment_N900.slurm  run_tests.py
data/configfiles/: EXP_experiment_config_LARGE.json  TEST_experiment_config_BASIC.json  TEST_experiment_config_MEDIUM.json  TEST_experiment_config_SMALL.json  TEST_experiment_config_TIMEOUT.json  experiment_config.json  experiment_config_.json  experiment_config_BASIC.json  experiment_config_EXP1.json  experiment_config_EXP2.json  experiment_config_HARD.json  experiment_config_INC.json  experiment_config_LARGE.json  experiment_config_N100.json  experiment_config_N1000.json  experiment_config_N200.json  experiment_config_N300.json  experiment_config_N400.json  experiment_config_N500.json  experiment_config_N600.json  experiment_config_N700.json  (+7 more)
rgp_solver/: pyproject.toml
src/: __init__.py  analyzer.ipynb  arc_runner.py  converter.py  er_encoder.py  format_validator.py  generator.py  helper.py  logger.py  mailer.py  mb_encoder.py  preprocessor.py  runner.py  solver.py  utils.py  visualizer.ipynb
tests/: __init__.py  sample_config.json  test_converter.py  test_er_encoder.py  test_format_validator.py  test_generator.py  test_helper.py  test_mb_encoder.py  test_runner.py  test_solver.py  test_utils.py
(+51 files in other folders)
