[tool.poetry]
name = "rgp-solver"
version = "0.1.0"
description = "#TODO"
authors = ["NVombat <nvombatkere@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]
include = [
    "src/assets/*.json"
]

[tool.poetry.dependencies]
python = "^3.11"
jsonschema = "^4.23.0"
python-sat = {extras = ["aiger", "approxmc", "cryptosat", "pblib"], version = "^1.8.dev13"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"