[tool.poetry]
name = "rgp-solver"
version = "0.1.0"
description = "#TODO"
authors = ["NVombat <nvombatkere@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]
include = [
    "src/assets/*.json"
]


[tool.poetry.dependencies]
python = "^3.11"
jsonschema = "^4.23.0"
python-sat = {extras = ["aiger", "approxmc", "cryptosat", "pblib"], version = "^1.8.dev13"}
matplotlib = "^3.9.2"
numpy = "^2.1.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
run-tests = "run_tests:run_tests"